force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <description>To track the Attendance of the Employees in the Aaramitechsolutions org</description>
    <label>Attendance</label>
    <nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>