force-app/main/default/objects/Attendance__c/fields/Emp_No__c.field-meta.xml
<CustomField>
    <fullName>Emp_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Emp_No</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Attendance</relationshipLabel>
    <relationshipName>Attendance</relationshipName>
    <type>Lookup</type>
</CustomField>